--- a/src/styles/game.module.scss
+++ b/src/styles/game.module.scss
@@ -1,17 +1,21 @@
+/* src/styles/game.module.scss */
+
 .gameWrapper {
-  min-height: 100vh;
+  min-height: 100dvh;
   width: 100%;
   background: linear-gradient(180deg, #1e0033 0%, #0a0a23 100%);
   overflow: hidden;
-  display: flex;
-  align-items: center;
-  //   justify-content: center;
-  padding: 1rem;
+  padding: 0.5rem;
   font-family: 'Comic Sans MS', 'Rubik', sans-serif;
   color: white;
   z-index: 1;
   position: relative;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: column;
   flex-direction: column;
+  -webkit-align-items: center;
+  align-items: center;
 }
 
 .contactWrapper {
@@ -143,9 +147,9 @@
   border-radius: 20px;
   border: 2px solid rgba(255, 255, 255, 0.15);
   padding-bottom: 0rem;
-  padding-top: 4rem;
-  width: 50rem;
-  height: 27rem;
+  padding-top: 1rem;
+  width: 40rem;
+  height: 17rem;
   text-align: center;
   backdrop-filter: blur(10px);
   position: relative;
@@ -165,8 +169,8 @@
 }
 
 .questionNumber {
-  font-size: 2rem;
-  margin-bottom: 1.5rem;
+  font-size: 1rem;
+  margin-bottom: 0.5rem;
   color: #00e5ff; /* או כל צבע שמתאים */
 }
 
@@ -176,17 +180,18 @@
   border-radius: 20px;
   border: 2px solid rgba(255, 255, 255, 0.15);
   padding: 1.5rem;
-  width: 50rem;
-  height: 36rem;
+  width: 30rem;
+  height: 22rem;
   text-align: center;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.4);
+  -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
   position: relative;
   z-index: 1;
 }
 
 .question {
-  font-size: clamp(2.6rem, 9vw, 3.6rem);
+  font-size: clamp(1rem, 3vw, 1.5rem);
   font-weight: bold;
   margin-bottom: 0px;
   margin-top: 0px;
@@ -198,7 +203,7 @@
 }
 
 .timer {
-  font-size: clamp(2rem, 6vw, 2.4rem);
+  font-size: clamp(1rem, 3vw, 1.2rem);
   color: #ffd700; // זהב
   font-weight: bold;
   margin-bottom: 1.25rem;
@@ -215,8 +220,8 @@
 }
 
 .btn {
-  width: 50%;
-  padding: 1rem 1.25rem;
+  width: 15rem;
+  padding: 0.2rem 1rem;
   font-size: 1.2rem;
   border-radius: 1rem;
   border: 1px solid #1c1c1e;
@@ -252,7 +257,7 @@
 
 .smartMessage {
   margin-top: 1.5rem;
-  font-size: 2rem;
+  font-size: 1rem;
   text-align: center;
   color: #ffe082;
   font-weight: 500;
@@ -263,13 +268,17 @@
   background-color: #00ff99; // ירוק ניאון
   color: #000;
   font-weight: bold;
-  padding: 1rem 2rem;
+  width: 5rem;
+  padding: 0.4rem 0.5rem;
+  font-size: 1rem;
 }
 .btn.no {
   background-color: #ff6666; // אדום ורוד עדין
   color: #000;
   font-weight: bold;
-  padding: 1rem 2rem;
+  width: 5rem;
+  padding: 0.4rem 0.5rem;
+  font-size: 1rem;
 }
 
 .btn:hover {
@@ -283,11 +292,11 @@
 }
 
 .categoryTitle {
-  font-size: 3.5rem;
+  font-size: 1.5rem;
   font-weight: 800;
   color: #38bdf8;
   text-align: center;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
   margin-top: 3px;
   z-index: 3;
   position: relative;
@@ -295,13 +304,14 @@
 
 .ctaWrapper {
   margin-top: 0rem;
+  margin-bottom: 1rem;
   text-align: center;
   z-index: 1;
   position: relative;
 }
 
 .ctaHeadline {
-  font-size: 2.5rem;
+  font-size: 1.5rem;
   color: #38bdf8;
   font-weight: 600;
   margin-bottom: 1rem;
@@ -327,7 +337,7 @@
 }
 
 .contactBtn {
-  margin-top: 2rem;
+  margin-top: 0.5rem;
   padding: 1rem 2.5rem;
   font-size: 1.2rem;
   font-weight: bold;
@@ -337,7 +347,6 @@
   border: none;
   cursor: pointer;
   transition: transform 0.3s ease;
-
   &:hover {
     transform: scale(1.05);
   }
@@ -348,8 +357,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 90vh;
-  padding: 2rem;
+  min-height: 10vh;
+  padding: 1rem;
   background: transparent;
   border-radius: 12px;
   color: white;
@@ -360,21 +369,30 @@
   form {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    margin-top: 2rem;
+    gap: 0.3rem;
+    margin-top: 1rem;
     width: 100%;
     max-width: 400px;
 
     input {
-      padding: 1rem;
-      font-size: 1rem;
+      padding: 0.3rem;
+      font-size: 0.6rem;
       border-radius: 8px;
       border: none;
     }
 
+    textarea {
+      padding: 0.3rem;
+      font-size: 0.6rem;
+      border-radius: 8px;
+      border: none;
+      resize: none; /* למנוע שינוי גודל */
+      height: 1rem; /* גובה קבוע */
+    }
+
     button {
-      padding: 1rem;
-      font-size: 1.1rem;
+      padding: 0.3rem;
+      font-size: 0.6rem;
       background-color: #4361ee;
       color: white;
       border: none;
@@ -385,24 +403,24 @@
 }
 
 .ctaHeadline {
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: bold;
   margin-bottom: 1rem;
   text-align: center;
 }
 
 .ctaParagraph {
-  font-size: 1.1rem;
+  font-size: 0.8rem;
   line-height: 1.7;
   text-align: center;
-  margin-bottom: 1.2rem;
+  margin-bottom: 0.1rem;
 }
 
 .ctaCall {
   font-size: 1.3rem;
   font-weight: 600;
   text-align: center;
-  margin-bottom: 2rem;
+  margin-bottom: 0.1rem;
   color: #00ffc8;
 }
 
@@ -416,8 +434,8 @@
   background-color: #ffd60a;
   color: #0a0a23;
   font-weight: 700;
-  font-size: 1.5rem;
-  padding: 12px 24px;
+  font-size: 1rem;
+  padding: 0.5rem 1rem;
   border: 2px solid #0a192f;
   border-radius: 18px;
   cursor: pointer;
@@ -430,7 +448,7 @@
 }
 
 .ctaCallend {
-  font-size: 2rem;
+  font-size: 1rem;
   font-weight: 600;
   text-align: center;
   padding-bottom: 1rem;
