--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,11 +1,35 @@
+/*src/styles/globals.css*/
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+html {
+  -webkit-text-size-adjust: 100%;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
+html,
+body,
+#__next {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   direction: rtl;
   font-family: sans-serif;
+  background: var(--bg);
+  color: var(--text-color);
 }
+
 :root {
   --bg: linear-gradient(to bottom right, #3b82f6, #9333ea);
   --text-color: #ffffff;
